update request check endpoint
